--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]}
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
